Updated copy. tweaked css to stop inner text from spreading too wide

--- a/themes/nav-community-v1/static/css/center_text_section.scss
+++ b/themes/nav-community-v1/static/css/center_text_section.scss
@@ -7,6 +7,9 @@
   h2 {
     font-size: 30px;
   }
+  .center-text-section-inner {
+    max-width: 800px;
+  }
 }
 
 .center-text-section-content {
