--- a/themes/nav-community-v1/static/css/nav.css
+++ b/themes/nav-community-v1/static/css/nav.css
@@ -116,6 +116,8 @@
   background-size: contain; }
   .center-text-section h2 {
     font-size: 30px; }
+  .center-text-section .center-text-section-inner {
+    max-width: 800px; }
 
 .center-text-section-content {
   height: inherit;
